k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fastapi
  template:
    metadata:
      labels:
        component: fastapi
    spec:
      containers:
        - name: fastapi
          image: 'tsadimas/myfastapi'
          ports:
            - containerPort: 8000
