k8s/redis-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-clip
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
