k8s/fastapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: fastapi-clip 
          servicePort: 8000
